# RunAway

./: .gitignore  CMakeLists.txt  README.md  makefile
assets/fonts/: minecraftia-bitmap.fnt  minecraftia-bitmap_0.tga
cmake_modules/: FindSFML.cmake
src/: FPS.hpp  Game.cpp  Game.h  Game.hpp  ImageManager.cpp  ImageManager.h  SoundManager.cpp  SoundManager.hpp
src/Component/: Component.hpp  GravityComponent.cpp  GravityComponent.hpp  HealthBarComponent.cpp  HealthBarComponent.hpp
src/Entity/: Entity.h  Entity.hpp  Player.cpp  Player.h  Player.hpp
src/Level/: Level.cpp  Level.h  Level.hpp  Tile.cpp  Tile.h  Tile.hpp
